Fix(🛠) : Feature image is not showing in the learning area.

--- a/assets/src/scss/frontend/learning-area/_lesson-content.scss
+++ b/assets/src/scss/frontend/learning-area/_lesson-content.scss
@@ -107,6 +107,15 @@
     }
   }
 
+  .tutor-lesson-feature-image {
+    display: block;
+    width: auto;
+    height: auto;
+    max-height: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
   @include tutor-breakpoint-up(sm) {
     margin-top: $tutor-spacing-4;
 
@@ -124,7 +133,7 @@
     .tutor-lesson-content-tab {
       padding-inline: $tutor-spacing-6;
 
-      .tutor-lesson-video-wrapper {
+      .tutor-lesson-video-wrapper, .tutor-lesson-image-wrapper {
         margin-inline: -$tutor-spacing-6;
         margin-bottom: $tutor-spacing-6;
       }
